Updated HTML and CSS to fix a horizontal scrollbar issue in IE

--- a/styles.css
+++ b/styles.css
@@ -143,14 +143,11 @@ div.menu {
   box-shadow: 0px 0px 15px 0px black;
 }
 
-.menu ul {
-  list-style: none;
-}
-
-.menu li {
+.menu a {
+  text-decoration: none;
   display: inline-block;
   float: right;
-  padding: 2px;
+  padding: 3px;
   margin: 2px;
   border: 5px solid #661e2a;
   border-radius: 5px;
@@ -190,19 +187,6 @@ div.menu {
     margin: 0 auto;
 }
 
-#bgpic-cover { 
-    content: "";
-    position: relative;
-    min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;
-    z-index: -99;
-    background-color: black;
-    opacity: 0.1;
-    filter: alpha(opacity=10); /* For IE8 and earlier */
-    }
-
 #pic-div {
   z-index: 0;
   height: 100%;
@@ -226,6 +210,7 @@ div.menu {
 #logo-div img {
     position: absolute;
     max-width: 650px;
+    width: 100%;
     height: auto;
     top: 35%;
     left: 50%;
@@ -457,7 +442,7 @@ div.menu {
   height: 67px;
 }
 
-.menu li {
+.menu a {
   padding: 10px;
   margin: 10px;
 }
